# app_data_cloud_saver

./: .gitignore  Cargo.toml  ProcFile  README.md  RustConfig
src/auth_server/: README.md  dropbox.rs  main.rs
src/client/: apps.rs  auth.rs  main.rs  ui.glade  ui_builder.rs
src/daemon/: apps.rs  dropbox_check.rs  dropbox_foldering.rs  dropbox_uploader.rs  helpers.rs  main.rs
