[package]
name = "save_manager"
version = "0.1.0"
authors = ["kawuka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "save_daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "save_client"
path = "src/client/main.rs"

[dependencies]
sysinfo = "0.14.4"
dashmap = "4.0.0-rc4"
lazy_static = "1.4.0"
dirs = "2.0.2"
dropbox-sdk = "0.3.0"
serde_json = "1.0.53"
serde = { version = "1.0.111", features=['derive'] }
notify = "5.0.0-pre.2"
[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

