[package]
name = "save_manager"
version = "0.1.0"
authors = ["korneliuszw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sysinfo = { version = "0.14.4", optional = true }
dashmap = { version = "4.0.0-rc4", optional = true }
lazy_static = { version = "1.4.0", optional=true }
dirs = { version = "2.0.2", optional=true }
dropbox-sdk = { version = "0.3.0", optional = true }
serde_json = "1.0.53"
serde = { version = "1.0.111", features=['derive'] }
notify = { version = "5.0.0-pre.2", optional = true }
hyper = { version = "0.13.6", optional = true}
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.21", features=["full"], optional=true}
[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]
optional = true
[dependencies.gio]
version = ""
features = ["v2_44"]
optional = true

[features]
client = ["gio", "gtk"]
server = ["tokio", "hyper"]
daemon = ["sysinfo", "dashmap", "lazy_static", "dropbox-sdk", "notify"]
client_daemon_shared = ["dirs"]
[[bin]]
name = "save_daemon"
path = "src/daemon/main.rs"
required-features = ["daemon", "client_daemon_shared"]
[[bin]]
name = "save_client"
path = "src/client/main.rs"
required-features = ["client", "client_daemon_shared"]

[[bin]]
name = "auth_server"
path = "src/auth_server/main.rs"
required-features = ["server"]

